name:                haslex-guard
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable haslex-guard
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
