name:                haslex-guard
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable haslex-guard
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
               ,       turtle >=1.2.7
               ,       system-filepath >= 0.4
               ,       optional-args >=1.0
               ,       text >=1.2
               ,       semigroups >=0.18
               ,       Plural >= 0.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       DeriveGeneric
                       DeriveFoldable
                       DeriveTraversable
                       DeriveFunctor
                       MultiWayIf
                       LambdaCase
  ghc-options:         -Wall
